# vtc-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  azure-pipelines.yml  pip-freeze.txt  setup.cfg  setup.py  tarpaulin.toml
reports/: coverage.xml  tests_junit.xml
src/: consts.rs  errors.rs  framerate.rs  framerate_parse.rs  framerate_test.rs  lib.rs  source_frames.rs  source_ppro_ticks.rs  source_seconds.rs  timecode.rs  timecode_parse.rs  timecode_test.rs  timecode_test_ops.rs  timecode_test_parse.rs  timecode_test_table.rs
