[package]
name = "vtc"
version = "0.1.13"
description = "A SMPTE timeoce library for Rust"
edition = "2018"
license = "MIT"
repository = "https://github.com/opencinemac/vtc-rs"
authors = [ "Open Cinema Collective", "Billy Peake", "Jamie Hardt",]
readme = "README.md"

[dependencies]
num = "0.4"
regex = "1.5"
lazy_static = "1.4.0"

[dev-dependencies]
rstest = "0.9.0"
serde_json = "1.0"

[dev-dependencies.serde]
version = "1.0"
features = [ "derive",]
